--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+
 # Logs
 logs
 *.log
