--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
 	},
 	"homepage": "https://github.com/ymerej-noyorb/readmefy-app#readme",
 	"dependencies": {
-		"@heroicons/react": "^2.2.0",
-		"@tailwindcss/vite": "^4.0.6",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-router-dom": "^7.1.5",
-		"tailwindcss": "^4.0.6"
+		"@heroicons/react": "2.2.0",
+		"@tailwindcss/vite": "4.0.6",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-router-dom": "7.1.5",
+		"tailwindcss": "4.0.6"
 	},
 	"devDependencies": {
-		"@types/react": "^19.0.8",
-		"@types/react-dom": "^19.0.3",
-		"@vitejs/plugin-react": "^4.3.4",
-		"vite": "^6.1.0"
+		"@types/react": "19.0.8",
+		"@types/react-dom": "19.0.3",
+		"@vitejs/plugin-react": "4.3.4",
+		"vite": "6.1.0"
 	}
 }
